<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WheresTheFood</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_login">Where\'s The Food</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_btn">Iniciar sesión</string>
    <string name="forgotten_pass">Olvidé mi contraseña</string>
    <string name="not_signed_up">¿Aún no tienes una cuenta?</string>
    <string name="sign_up_btn">Registrarse</string>
    <string name="title_activity_sign_up">Registrarse</string>
    <string name="sign_up_description">Introduce los datos a continuación para registrarte</string>
    <string name="name_hint">Nombre</string>
    <string name="welcome">Bienvenido, Cosme Fulanito</string>
    <string name="new_todo">Create new TODO list</string>
    <string name="new_shopping">I\'m already shopping </string>
    <string name="title_activity_forgotten_pass">Recuperación de contraseña</string>
    <string name="send_email">Enviar correo electrónico</string>
    <string name="forgotten_pass_description">Introduce tu email y se enviará automáticamente un correo electrónico con tus datos.</string>
    <string name="title_activity_todolist">Nueva Lista Planeada</string>
    <string name="title_activity_shopping_list">Nueva Lista Rápida</string>

</resources>
